php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #27337 [PATCH] Failure to call sapi_shutdown() leaves memory leak
Submitted: 2004-02-21 00:28 UTC Modified: 2004-02-23 14:07 UTC
From: msisolak at yahoo dot com Assigned:
Status: Closed Package: IIS related
PHP Version: 4CVS, 5CVS (2004-02-23) OS: Windows 2000
Private report: No CVE-ID: None
 [2004-02-21 00:28 UTC] msisolak at yahoo dot com
Description:
------------
The ISAPI doesn't call sapi_shutdown() so the
known_post_content_types hash tables doesn't get freed.

Patch:

--- php5isapi.c.orig	Tue Feb 17 17:07:14 2004
+++ php5isapi.c	Tue Feb 17 17:03:54 2004
@@ -935,6 +935,7 @@
 			if (isapi_sapi_module.shutdown) {
 				isapi_sapi_module.shutdown(&sapi_module);
 			}
+			sapi_shutdown();
 			tsrm_shutdown();
 			break;
 	}



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-02-21 02:52 UTC] sniper@php.net
Does this apply to PHP_4_3 branch too? 

 [2004-02-21 17:06 UTC] msisolak at yahoo dot com
The PHP_4_3 branch ISAPI also does not call sapi_shutdown().  I see no indication of a reason to not call this function to balance the call to sapi_startup(), so I would think it should be added to both the PHP_4_3 branch and HEAD.
 [2004-02-23 14:07 UTC] sniper@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC