MFH: fixed bug #27337 (missing sapi_shutdown())